2010-04-21  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Unskip a bunch of now passing tests, which was skipped because of
        missing LayoutTestController::computedStyleIncludingVisitedInfo
        https://bugs.webkit.org/show_bug.cgi?id=37759

        * platform/qt/Skipped:
2010-04-21  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Add LayoutTestController interface: computedStyleIncludingVisitedInfo
        https://bugs.webkit.org/show_bug.cgi?id=37759

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::computedStyleIncludingVisitedInfo):
        * WebCoreSupport/DumpRenderTreeSupportQt.h:
2010-04-21  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Add LayoutTestController interface: computedStyleIncludingVisitedInfo
        https://bugs.webkit.org/show_bug.cgi?id=37759

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::computedStyleIncludingVisitedInfo):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

Canonical link: https://commits.webkit.org/49244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57963 268f45cc-cd09-0410-ab3c-d52691b4dbfc