WebKit/qt/WebCoreSupport/DumpRenderTreeSupportQt.h
@@ -24,6 +24,7 @@
 #define DumpRenderTreeSupportQt_h
 
 #include "qwebkitglobal.h"
+#include <QVariant>
 
 class QWebPage;
 class QWebFrame;
@@ -78,6 +79,7 @@ public:
     static void resetOriginAccessWhiteLists();
 
     static int workerThreadCount();
+    static QVariantMap computedStyleIncludingVisitedInfo(QWebFrame* frame, const QString& id);
 };
 
 #endif
