WebKitTools/DumpRenderTree/qt/LayoutTestControllerQt.h
@@ -175,6 +175,7 @@ public slots:
     int pageNumberForElementById(const QString& id, float width = 0, float height = 0);
     int numberOfPages(float width = maxViewWidth, float height = maxViewHeight);
     bool callShouldCloseOnWebView();
+    QVariantMap computedStyleIncludingVisitedInfo(const QVariant& obj) const;
 
     /*
         Policy values: 'on', 'auto' or 'off'.
